# Astral

astral_gazebo/: CMakeLists.txt  README.md  package.xml
astral_gazebo/launch/: simulator.launch
astral_gazebo/msg/: Movement.msg  Velocity.msg
astral_gazebo/src/: kinematics.cpp  main.cpp  odometry.cpp
astral_gazebo/src/sensor/: encoder.cpp
astral_gazebo/srv/: KinematicsForward.srv  KinematicsInverse.srv
astral_gazebo/world/: astral.world
efficientdet/: inference.py  model_inspect.py
efficientdet/savedmodel/variables/: variables.index
rrt-astral/: CMakeLists.txt  LICENSE  README.md
rrt-astral/include/: renderarea.h
rrt-astral/include/common/: constants.h
rrt-astral/include/mainwindow/: mainwindow.h
rrt-astral/include/rrt/: rrt.h
rrt-astral/src/: mainwindow.cpp  mainwindow.ui  obstacles.cpp  renderarea.cpp  rrt.cpp
